# ROS-2-Drone-Navigation-in-Gazebo

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_drone/lib/my_drone/: drone_teleop
install/my_drone/share/ament_index/resource_index/package_run_dependencies/: my_drone
install/my_drone/share/ament_index/resource_index/parent_prefix_path/: my_drone
install/my_drone/share/my_drone/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_drone/share/my_drone/cmake/: my_droneConfig-version.cmake  my_droneConfig.cmake
install/my_drone/share/my_drone/environment/: ament_prefix_path.dsv  path.dsv
install/my_drone/share/my_drone/launch/: spawn.launch.py
install/my_drone/share/my_drone/models/my_drone/: model.sdf
install/my_drone/share/my_drone/worlds/: drone_world.sdf
src/my_drone/: CMakeLists.txt
src/my_drone/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_drone/launch/: spawn.launch.py
src/my_drone/log/: latest_build
src/my_drone/models/my_drone/: model.sdf
src/my_drone/src/: drone_teleop.cpp
